pkg/story/testdata/negative/malformed_depends_no_id.story
Meta
    Name:      Malformed Depends No ID Fixture
    Id:        malformed_depends_no_id_fixture
    Spec-Ref:  OCPP 2.0.1 §B01 BootNotification
    Tags:      conformance
    Stations:  1
    Depends:
      - scope: per-station

Scenario: Dummy scenario
    When  something happens
    Then  something is verified
